--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -1,4 +1,4 @@
-@import '../../styles/base/variables';
+@use '../../styles/base/variables' as *;
 
 .hero {
   position: relative;
@@ -14,7 +14,7 @@
   color: white;
   
   background-image: url('./assets/images/mainImage.webp');
-  background-color: #2c3e50; 
+  background-color: $color-primary; 
   background-size: cover; 
   background-position: center; 
   background-repeat: no-repeat;
