--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,10 @@
 @use './base/variables.scss' as *;
 @use '../components/Hero/Hero.scss';
 
+// * {
+//   outline: 1px solid rgb(255, 0, 0);
+// }
+
 @font-face {
   font-family: 'Ubuntu';
   src: url('@/assets/fonts/Ubuntu-Medium.ttf') format('ttf'),
@@ -23,27 +27,4 @@ body {
   font-family: 'Ubuntu', sans-serif;
 }
 
-h1 {
-  font-size: 2.5rem;
-  font-weight: 700;
-  margin-bottom: 1.5rem;
-}
 
-h2 {
-  font-size: 2rem;
-  font-weight: 600;
-}
-
-p {
-  font-size: 1rem;
-  line-height: 1.6;
-  margin-bottom: 1rem;
-}
-
-a {
-  color: #2c3e50;
-  text-decoration: none;
-  &:hover {
-    text-decoration: underline;
-  }
-}
