--- a/src/components/AboutUs/About.scss
+++ b/src/components/AboutUs/About.scss
@@ -1,32 +1,88 @@
 @use "../../styles/base/reset";
 
 .about {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100vh;
-    width: auto;
-    padding: 80px 0;
-    gap: 50px;
-    background-color: #1b1717;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  width: auto;
+  padding-top: 40px;
+  gap: 20px;
+  background-color: #1b1717;
 }
 
 .about__title {
-    font-size: 35px;
-    color: white;
+  font-size: 35px;
+  color: white;
+  overflow: hidden;
+  font-weight: bolder;
 }
 
 .about__cards {
-    margin: 50px;
-    gap: 50px;
+  gap: 20px;
+  height: 100vh;
+  width: 100%;
+  line-height: 1.5;
 }
 
 .about__card {
-    color: white;
-    text-align: center;
-    width: 360px;
-    background-color: #302E2E;
-    height: 250px;
-    width: 100%;
-    padding: 14px;
+  color: white;
+  text-align: center;
+  width: 360px;
+  background-color: #302e2e;
+  height: 80%;
+  padding: 10px;
+  border-radius: 30px;
+  font-size: 20px;
+  box-shadow: 1px 1px 25px 5px rgba(51, 244, 68, 1);
+  margin: 0px 25px;
+  overflow: hidden;
+}
+
+@media (max-width: 430px) {
+  .about__cards {
+    flex-direction: column;
+    padding: 30px 0px;
+  }
+
+  .about__card {
+    font-size: 16px;
+    height: 100%;
+    width: 300px;
+  }
+}
+
+@media (min-width: 431px) and (max-width: 768px) {
+  .about__cards {
+    flex-direction: column;
+    padding: 30px 0px;
+    gap: 40px;
+  }
+
+  .about__card {
+    font-size: 26px;
+    height: 100%;
+    width: 500px;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 1440px) {
+  .about__title {
+    font-size: 40px;
+  }
+
+  .about__card {
+    font-size: 25px;
+  }
+}
+
+@media (min-width: 1441px) {
+  .about__title {
+    font-size: 50px;
+  }
+
+  .about__card {
+    width: 500px;
+    font-size: 40px;
+  }
 }
