--- a/src/components/AboutUs/About.scss
+++ b/src/components/AboutUs/About.scss
@@ -5,8 +5,7 @@
   flex-direction: column;
   align-items: center;
   height: 100vh;
-  width: auto;
-  padding-top: 40px;
+  width: 100%;
   gap: 20px;
   background-color: #1b1717;
 }
@@ -16,13 +15,15 @@
   color: white;
   overflow: hidden;
   font-weight: bolder;
+  margin-top: 30px;
 }
 
 .about__cards {
   gap: 20px;
-  height: 100vh;
+  height: 100%;
   width: 100%;
   line-height: 1.5;
+
 }
 
 .about__card {
@@ -31,22 +32,33 @@
   width: 360px;
   background-color: #302e2e;
   height: 80%;
-  padding: 10px;
+  padding: 12px;
   border-radius: 30px;
-  font-size: 20px;
   box-shadow: 1px 1px 25px 5px rgba(51, 244, 68, 1);
   margin: 0px 25px;
   overflow: hidden;
 }
 
-@media (max-width: 430px) {
+@media (max-width: 375px) {
+  .about__cards {
+    flex-direction: column;
+    padding: 30px 0px;
+  }
+  .about__card {
+    font-size: 12px;
+    height: 100%;
+    width: 300px;
+  }
+}
+
+@media (min-width: 376px) and (max-width: 430px) {
   .about__cards {
     flex-direction: column;
     padding: 30px 0px;
   }
 
   .about__card {
-    font-size: 16px;
+    font-size: 12px;
     height: 100%;
     width: 300px;
   }
@@ -60,15 +72,27 @@
   }
 
   .about__card {
-    font-size: 26px;
+    font-size: 16px;
     height: 100%;
-    width: 500px;
+    width: 360px;
   }
 }
 
-@media (min-width: 769px) and (max-width: 1440px) {
+@media (min-width: 769px) and (max-width: 1024px) {
   .about__title {
     font-size: 40px;
+    margin-top: 40px;
+  }
+  
+  .about__card {
+    font-size: 20px;
+  }
+}
+
+@media (min-width: 1025px) and (max-width: 1440px) {
+  .about__title {
+    font-size: 40px;
+    margin-top: 40px;
   }
 
   .about__card {
@@ -79,6 +103,7 @@
 @media (min-width: 1441px) {
   .about__title {
     font-size: 50px;
+    margin-top: 40px;
   }
 
   .about__card {
