--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -14,6 +14,7 @@
   background-size: cover;
   background-position: center;
   background-color: #2c3e50;
+  background-attachment: fixed;
 
   &__arrow {
     will-change: transform;
