--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -8,13 +8,9 @@
   justify-content: center;
   align-items: center;
   color: white;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url(../../assets/images/mainImage.webp);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  background-color: #2c3e50;
-  background-attachment: fixed;
+  // background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+  //   url(../../assets/images/mainImage.webp) no-repeat center center / cover fixed;
+  // background-color: #2c3e50;
 
   &__arrow {
     will-change: transform;
@@ -26,7 +22,6 @@
   flex-direction: column;
   align-items: center;
   gap: 50px;
-  text-align: center;
   margin: 10px;
 
   & h1 {
