--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,11 +1,7 @@
-@use './base/reset.scss' as *;
-@use './base/utilities.scss' as *;
-@use './base/variables.scss' as *;
-@use '../components/Hero/Hero.scss';
-
-// * {
-//   outline: 1px solid rgb(255, 0, 0);
-// }
+@use "./base/reset.scss" as *;
+@use "./base/utilities.scss" as *;
+@use "./base/variables.scss" as *;
+@use "../components/Hero/Hero.scss";
 
 .ubuntu-medium {
   font-family: "Ubuntu", sans-serif;
@@ -23,26 +19,27 @@ html {
   scroll-behavior: smooth;
 }
 
-body{
+body {
   position: relative;
 }
 
 body::before {
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
-      url("../assets/images/mainImage.webp") no-repeat center center / cover;
-    content: ' ';
-    height: 100%;
-    left: 0;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    will-change: transform;
-    z-index: -1;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("../assets/heroImages/mainImage.webp") no-repeat center center / cover;
+  content: " ";
+  height: 100%;
+  left: 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  will-change: transform;
+  z-index: -1;
 }
 
 @media (max-width: 375px) {
   body::before {
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
-      url("../assets/images/mainImage-mobile.webp") no-repeat center center;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+      url("../assets/heroImages/mainImage-mobile.webp") no-repeat center center /
+        cover;
   }
 }
