--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -3,10 +3,7 @@
 .hero {
   height: 100vh;
   position: relative;
-  display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
   color: white;
 
   &__arrow {
@@ -15,9 +12,7 @@
 }
 
 .hero__content {
-  display: flex;
   flex-direction: column;
-  align-items: center;
   gap: 50px;
   margin: 10px;
 
@@ -28,6 +23,8 @@
 
   & .hero__subtitle {
     font-size: 25px;
+    font-family: 'Ubuntu', Arial, sans-serif;
+    font-weight: 300; // Установаить 300 размер
   }
 }
 
@@ -50,10 +47,12 @@
 }
 
 @keyframes bounce {
+
   0%,
   100% {
     transform: translateY(0);
   }
+
   50% {
     transform: translateY(-3px);
   }
@@ -74,11 +73,11 @@
 @media (min-width: 1440px) {
   .hero__content {
     & h1 {
-      font-size: 100px;
+      font-size: 80px;
     }
 
     & .hero__subtitle {
-      font-size: 50px;
+      font-size: 30px;
     }
   }
 }
