--- a/src/components/AboutUs/About.scss
+++ b/src/components/AboutUs/About.scss
@@ -9,11 +9,12 @@
 }
 
 .about__title {
-  font-size: 35px;
+  font-size: 40px;
   color: white;
   overflow: hidden;
   font-weight: bolder;
-  margin-top: 30px;
+  margin-top: 40px;
+  margin-bottom: 0px;
 }
 
 .about__cards {
@@ -35,11 +36,14 @@
   overflow: hidden;
 }
 
-@media (max-width: 375px) {
+@media (max-width: 768px) {
   .about__cards {
     flex-direction: column;
     padding: 30px 0px;
   }
+}
+
+@media (max-width: 375px) {
   .about__card {
     font-size: 12px;
     height: 100%;
@@ -48,11 +52,6 @@
 }
 
 @media (min-width: 376px) and (max-width: 430px) {
-  .about__cards {
-    flex-direction: column;
-    padding: 30px 0px;
-  }
-
   .about__card {
     font-size: 12px;
     height: 100%;
@@ -61,12 +60,6 @@
 }
 
 @media (min-width: 431px) and (max-width: 768px) {
-  .about__cards {
-    flex-direction: column;
-    padding: 30px 0px;
-    gap: 40px;
-  }
-
   .about__card {
     font-size: 16px;
     height: 100%;
@@ -75,33 +68,18 @@
 }
 
 @media (min-width: 769px) and (max-width: 1024px) {
-  .about__title {
-    font-size: 40px;
-    margin-top: 40px;
-  }
-  
   .about__card {
     font-size: 20px;
   }
 }
 
 @media (min-width: 1025px) and (max-width: 1440px) {
-  .about__title {
-    font-size: 40px;
-    margin-top: 40px;
-  }
-
   .about__card {
     font-size: 25px;
   }
 }
 
 @media (min-width: 1441px) {
-  .about__title {
-    font-size: 40px;
-    margin-top: 40px;
-  }
-
   .about__card {
     width: 500px;
     font-size: 35px;
