--- a/src/components/Reviews/Reviews.scss
+++ b/src/components/Reviews/Reviews.scss
@@ -1,52 +1,135 @@
 @use "../../styles/base/reset";
 
 .reviews {
-    background-color: #1b1717;
-    height: 100vh;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+  background-color: #1b1717;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
 h2 {
-    margin: 30px 0px;
-    font-size: 35px;
-    color: white;
-    overflow: hidden;
+  margin: 20px 0px;
+  font-size: 35px;
+  color: white;
+  overflow: hidden;
 }
 
 .review_cards {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    height: 100vh;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 100vh;
 }
 
 .review {
-    display: grid;
-    grid-template-rows: auto 1fr;
-    justify-items: center;
-    width: 40%;
-    height: 90%;
-    background-color: white;
-    border-radius: 30px;
-    margin: 0px 20px;
-    padding: 20px;
-    box-shadow: 1px 1px 25px 5px #008CFF;
-    text-align: center;
+  display: grid;
+  grid-template-rows: auto 1fr;
+  justify-items: center;
+  width: 40%;
+  height: 90%;
+  background-color: white;
+  border-radius: 30px;
+  margin: 0px 20px;
+  padding: 20px;
+  box-shadow: 1px 1px 25px 5px #008cff;
+  text-align: center;
+  overflow: hidden;
 
-    & h3 {
-        font-family: 'Ubuntu', Arial, sans-serif;
-        font-size: 20px;
-    }
+  & h3 {
+    font-family: "Ubuntu", Arial, sans-serif;
+    font-size: 20px;
+  }
 
-    & p {
-        font-family: Arial, sans-serif;
-        align-self: center;
-        justify-self: center;
-        font-size: 16px;
-    }
+  & p {
+    font-family: Arial, sans-serif;
+    align-self: center;
+    justify-self: center;
+    font-size: 16px;
+  }
 }
 
+@media (max-width: 768px) {
+  h2 {
+    font-size: 26px;
+  }
+
+  .review_cards {
+    flex-direction: column;
+    justify-content: center;
+    padding: 10px;
+    gap: 10px;
+  }
+
+  .review {
+    width: 100%;
+    height: 100%;
+    margin: 10px;
+  }
+}
+
+@media (max-width: 375px) {
+  h2 {
+    font-size: 20px;
+  }
+
+  .review h3 {
+    font-size: 16px;
+  }
+
+  .review p {
+    font-size: 16px;
+  }
+}
+
+@media (min-width: 376px) and (max-width: 425px) {
+  .review h3 {
+    font-size: 22px;
+  }
+
+  .review p {
+    font-size: 18px;
+  }
+}
+
+@media (min-width: 426px) and (max-width: 768px) {
+  .review h3 {
+    font-size: 22px;
+  }
+
+  .review p {
+    font-size: 18px;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+  .review h3 {
+    font-size: 26px;
+  }
+
+  .review p {
+    font-size: 22px;
+  }
+}
+
+@media (min-width: 1025px) and (max-width: 1440px) {
+  .review h3 {
+    font-size: 22px;
+  }
+
+  .review p {
+    font-size: 20px;
+  }
+}
+
+@media (min-width: 1441px) {
+  .review h3 {
+    font-size: 30px;
+  }
+
+  .review p {
+    font-size: 28px;
+  }
+}
