--- a/src/components/Communication/Communication.scss
+++ b/src/components/Communication/Communication.scss
@@ -43,3 +43,13 @@
         font-size: 50px;
     }
 }
+
+@media (max-height: 430px) {
+    .containerComm {
+        gap: 10px;
+
+        & p {
+            line-height: 1.5;
+        }
+    }
+}
