--- a/src/components/Reviews/Reviews.scss
+++ b/src/components/Reviews/Reviews.scss
@@ -22,6 +22,7 @@ h2 {
   justify-content: space-around;
   align-items: center;
   height: 100vh;
+  overflow: hidden;
 }
 
 .review {
@@ -132,4 +133,21 @@ h2 {
   .review p {
     font-size: 28px;
   }
+}
+
+@media (max-height: 430px) {
+  h2 {
+    margin-bottom: 10px;
+  }
+
+  .review_cards {
+    flex-direction: row;
+    padding: 20px;
+  }
+
+  .review {
+    & p {
+      font-size: 14px;
+    }
+  }  
 }
