--- a/src/components/Reviews/Reviews.scss
+++ b/src/components/Reviews/Reviews.scss
@@ -138,9 +138,7 @@
     padding: 20px;
   }
 
-  .review {
-    & p {
-      font-size: 14px;
-    }
-  }  
+  .review p {
+    font-size: 14px;
+  } 
 }
